--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - echo -e "machine github.com\n  login $GH_TOKEN" >> ~/.netrc
 
 script:
-- sh build.sh
+  - sh build.sh
 
 after_success:
-- if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then sh publish.sh; fi
+  - sh publish.sh
