--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
 
 name: 'Kidfund'
 main_site_url: 'http://www.kidfund.us'
+appstore_url: 'http://link.kidfund.us/rZ7m/KvCXj4TzhD'
 author: 'Tim Broder'
 author_image: "/assets/images/author_timbroder.jpeg"
 
