--- a/_config.yml
+++ b/_config.yml
@@ -5,29 +5,38 @@ gems:
   - jekyll-archives
 
 # Site settings
-title: "Building Kidfund"
-description: > # this means to ignore newlines until "email:"
+title: 'Building Kidfund'
+description: > # this means to ignore newlines until 'email:'
    Code | Design | Product
 
 email: info@kidfund.us
 #blog logo
-logo: "/assets/images/kidfund_logo.png"
+logo: '/assets/images/kidfund_logo.png'
 float_logo: true # true, false (default)
 
 # blog cover
-cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
+cover: '/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg'
 
 name: 'Kidfund'
 main_site_url: 'http://www.kidfund.us'
 appstore_url: 'http://link.kidfund.us/rZ7m/KvCXj4TzhD'
-author: 'Tim Broder'
-author_image: "/assets/images/author_timbroder.jpeg"
+
+authors:
+  tim:
+    name: 'Tim Broder'
+    image: '/assets/images/author_timbroder.jpeg'
+    site: 'http://timbroder.com'
+    github: timbroder
+    twitter: timothybroder
+  michael:
+    name: 'Michael Helmbrecht'
+    image: '/assets/images/author_michael.jpeg'
 
 permalink: /:year/:month/:day/:title.html
 paginate:	10
 
-url: "" # the base hostname & protocol for your site
-baseurl: ""
+url: '' # the base hostname & protocol for your site
+baseurl: ''
 #used to display twitter cards
 twitter_handle: '@kidfund'
 
@@ -56,14 +65,14 @@ social:
     desc: Follow me on Twitter
     share_url: http://twitter.com/share
     share_title: ?text=
-    share_link: "&amp;url="
+    share_link: '&amp;url='
 
   - icon:	facebook
     url:	https://facebook.com/Kidfund
     desc: Follow us on Facebook
     share_url: https://www.facebook.com/sharer.php
     share_title: ?t=
-    share_link: "&amp;u="
+    share_link: '&amp;u='
 
   - icon:	instagram
     url:	https://www.instagram.com/kidfund/
