--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ cover: '/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg'
 name: 'Kidfund'
 main_site_url: 'http://www.kidfund.us'
 appstore_url: 'http://link.kidfund.us/rZ7m/KvCXj4TzhD'
+github: https://github.com/Kidfund/building.kid.fund
 
 authors:
   tim:
